--- a/index.html
+++ b/index.html
@@ -1,35 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>EBRAINS-Italy Preview</title>
 
-<title>EBRAINS-Italy Preview</title>
+    <!-- Fav Icon -->
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" />
 
-<!-- Fav Icon -->
-<link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
 
-<!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
-
-<!-- Stylesheets -->
-<link href="assets/css/font-awesome-all.css" rel="stylesheet">
-<link href="assets/css/flaticon.css" rel="stylesheet">
-<link href="assets/css/owl.css" rel="stylesheet">
-<link href="assets/css/jquery.fancybox.min.css" rel="stylesheet">
-<link href="assets/css/animate.css" rel="stylesheet">
-<link href="assets/css/nice-select.css" rel="stylesheet">
-<link href="assets/css/timePicker.css" rel="stylesheet">
-<link href="assets/css/jquery-ui.css" rel="stylesheet">
-<link href="assets/css/color.css" rel="stylesheet">
-<link href="assets/css/style.css" rel="stylesheet">
-<link href="assets/css/responsive.css" rel="stylesheet">
-<link href="assets/css/template_extra.css" rel="stylesheet">
-
-</head>
-
+    <!-- Stylesheets -->
+    <link href="assets/css/font-awesome-all.css" rel="stylesheet" />
+    <link href="assets/css/flaticon.css" rel="stylesheet" />
+    <link href="assets/css/owl.css" rel="stylesheet" />
+    <link href="assets/css/jquery.fancybox.min.css" rel="stylesheet" />
+    <link href="assets/css/animate.css" rel="stylesheet" />
+    <link href="assets/css/nice-select.css" rel="stylesheet" />
+    <link href="assets/css/timePicker.css" rel="stylesheet" />
+    <link href="assets/css/jquery-ui.css" rel="stylesheet" />
+    <link href="assets/css/color.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet" />
+    <link href="assets/css/responsive.css" rel="stylesheet" />
+  </head>
 
 <!-- page wrapper -->
 <body>
@@ -118,87 +131,85 @@
                     </div>
                 </div>
             </div>
-<!-- header-lower -->
-<div class="header-lower">
-    <div class="auto-container">
-        <div class="outer-box">
-            <div class="menu-area clearfix">
-                <!--Mobile Navigation Toggler-->
-                <div class="mobile-nav-toggler">
-                    <i class="icon-bar"></i>
-                    <i class="icon-bar"></i>
-                    <i class="icon-bar"></i>
-                </div>
-                <nav class="main-menu navbar-expand-md navbar-light">
-                    <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
-                        <ul class="navigation clearfix">
-                            <li><a href="index.html">Home</a></li>
-                            <li class="dropdown"><a href="index.html">About Us</a>
-                                <ul>
-                                    <li><a href="about.html">About Us</a></li>
-                                    <li><a href="index-2.html">Digital Infrastructure</a></li>
-                                    <li><a href="index-3.html">Project</a></li>
-                                    <li><a href="index-3.html">Coordination team</a></li>
-                                    <li><a href="index-3.html">Partnership</a></li>
-                                </ul>
+            <!-- header-lower -->
+            <div class="header-lower">
+                <div class="auto-container">
+                    <div class="outer-box">
+                        <div class="menu-area clearfix">
+                            <!--Mobile Navigation Toggler-->
+                            <div class="mobile-nav-toggler">
+                                <i class="icon-bar"></i>
+                                <i class="icon-bar"></i>
+                                <i class="icon-bar"></i>
+                            </div>
+                            <nav class="main-menu navbar-expand-md navbar-light">
+                                <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
+                                    <ul class="navigation clearfix">
+                                        <li><a href="index.html">Home</a></li>
+                                        <li class="current dropdown"><a href="index.html">About Us</a>
+                                            <ul>
+                                                <li><a href="about.html">About Us</a></li>
+                                                <li><a href="index-2.html">Digital Infrastructure</a></li>
+                                                <li><a href="index-3.html">Project</a></li>
+                                                <li><a href="index-3.html">Coordination team</a></li>
+                                                <li><a href="index-3.html">Partnership</a></li>
+                                            </ul>
+                                        </li>
+                                        <li class="current dropdown"><a href="index.html">Research</a>
+                                            <ul>
+                                                <li><a href="about.html">Research Teams</a></li>
+                                                <li><a href="index-2.html">Publications</a></li>
+                                            </ul>
+                                        </li> 
+                                        <li class="dropdown"><a href="index.html">Resources</a>
+                                            <ul>
+                                                <li><a href="about.html">Data & Models</a></li>
+                                                <li><a href="team.html">HPC Cloud & Storage</a></li>
+                                                <li><a href="faq.html">Catalogue</a></li>
+                                            </ul>
+                                        </li>
+                                        <li class="dropdown"><a href="index.html">Services</a>
+                                            <ul>
+                                                <li><a href="about.html">In-silico Modeling</a></li>
+                                                <li><a href="team.html">Labs</a></li>
+                                                <li><a href="faq.html">Trans-National Access (TNA)</a></li>
+                                                <li class="dropdown"><a href="index.html">Training</a>
+                                                    <ul>
+                                                        <li><a href="shop.html">Training & Innovation Centre</a></li>
+                                                        <li><a href="shop-details.html">Activities</a></li>
+                                                        <li><a href="cart.html">Training Committee</a></li>
+                                                        <li><a href="checkout.html">Ebrains School</a></li>
+                                                        <li><a href="account.html">More Info</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li><a href="error.html">Incubation / Acceleration </a></li>
+                                                <li><a href="coming-soon.html">Publications</a></li>
+                                            </ul>
+                                        </li>
+                                        <li class="dropdown"><a href="index.html">News & Call</a>
+                                            <ul>
+                                                <li><a href="services.html">News</a></li>
+                                                <li><a href="service-details.html">Jobs</a></li>
+                                                <li><a href="service-details-2.html">Events</a></li>
+                                                <li><a href="service-details-3.html">Press review</a></li>
+                                            </ul>
+                                        </li> 
+                                        <li><a href="contact.html">Connect</a></li> 
+                                    </ul>
+                                </div>
+                            </nav>
+                        </div>
+                        <ul class="menu-right-content">
+                            <li class="user-box">
+                                <a href="index.html"><i class="flaticon-add-user"></i></a>
                             </li>
-                            <li class="dropdown"><a href="index.html">Research</a>
-                                <ul>
-                                    <li><a href="about.html">Research Teams</a></li>
-                                    <li><a href="index-2.html">Publications</a></li>
-                                </ul>
-                            </li> 
-                            <li class="dropdown"><a href="index.html">Resources</a>
-                                <ul>
-                                    <li><a href="about.html">Data & Models</a></li>
-                                    <li><a href="team.html">HPC Cloud & Storage</a></li>
-                                    <li><a href="faq.html">Catalogue</a></li>
-                                </ul>
+                            <li class="search-box-outer search-toggler">
+                                <i class="flaticon-magnifying-glass"></i>
                             </li>
-                            <li class="dropdown"><a href="index.html">Services</a>
-                                <ul>
-                                    <li><a href="about.html">In-silico Modeling</a></li>
-                                    <li><a href="team.html">Labs</a></li>
-                                    <li><a href="faq.html">Trans-National Access (TNA)</a></li>
-                                    <li class="dropdown"><a href="index.html">Training</a>
-                                        <ul>
-                                            <li><a href="shop.html">Training & Innovation Centre</a></li>
-                                            <li><a href="shop-details.html">Activities</a></li>
-                                            <li><a href="cart.html">Training Committee</a></li>
-                                            <li><a href="checkout.html">Ebrains School</a></li>
-                                            <li><a href="account.html">More Info</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="error.html">Incubation / Acceleration </a></li>
-                                    <li><a href="coming-soon.html">Publications</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown"><a href="index.html">News & Call</a>
-                                <ul>
-                                    <li><a href="services.html">News</a></li>
-                                    <li><a href="service-details.html">Jobs</a></li>
-                                    <li><a href="service-details-2.html">Events</a></li>
-                                    <li><a href="service-details-3.html">Press review</a></li>
-                                </ul>
-                            </li> 
-                            <li><a href="contact.html">Connect</a></li> 
                         </ul>
                     </div>
-                </nav>
+                </div>
             </div>
-            <!-- Move this section inside the outer-box -->
-            <ul class="menu-right-content">
-                <li class="user-box">
-                    <a href="index.html"><i class="flaticon-add-user"></i></a>
-                </li>
-                <li class="search-box-outer search-toggler">
-                    <i class="flaticon-magnifying-glass"></i>
-                </li>
-            </ul>
-        </div>
-    </div>                
-</div>
-
 
             <!--sticky Header-->
             <div class="sticky-header">
@@ -216,7 +227,7 @@
                     <div class="outer-box">
                         <div class="menu-area clearfix">
                             <nav class="main-menu clearfix">
-                                <!-- Menu items go here -->
+                                <!--Keep This Empty / Menu will come through Javascript-->
                             </nav>
                         </div>
                         <ul class="menu-right-content">
@@ -230,7 +241,6 @@
                     </div>
                 </div>
             </div>
-        
         </header>
         <!-- main-header end -->
 
@@ -271,7 +281,7 @@
                     <div class="auto-container">
                         <div class="content-box">
                             <div class="content-inner">
-                                <span class="count-text"></span>
+                                <span class="count-text">01.</span>
                                 <h5>International OPEN-ACCESS</h5>
                                 <h2>High Quality Datasets on Brain Regions</h2>
                                 <ul class="list clearfix">
@@ -298,7 +308,7 @@
                     <div class="auto-container">
                         <div class="content-box">
                             <div class="content-inner">
-                                <span class="count-text"> </span>
+                                <span class="count-text">02.</span>
                                 <h5>From sub-cellular to network</h5>
                                 <h2>Resources Allocation Programme (EIR)</h2>
                                 <ul class="list clearfix">
@@ -325,7 +335,7 @@
                     <div class="auto-container">
                         <div class="content-box">
                             <div class="content-inner">
-                                <span class="count-text"></span>
+                                <span class="count-text">03.</span>
                                 <h5>Features and innovations</h5>
                                 <h2>Brain-inspired Data Analysis and Tools</h2>
                                 <ul class="list clearfix">
@@ -352,7 +362,7 @@
                     <div class="auto-container">
                         <div class="content-box">
                             <div class="content-inner">
-                                <span class="count-text"></span>
+                                <span class="count-text">04.</span>
                                 <h5>Health and life science</h5>
                                 <h2> Facilities for excellence</h2>
                                 <ul class="list clearfix">
