--- a/index.html
+++ b/index.html
@@ -198,14 +198,9 @@
             <div class="sticky-header">
                 <div class="auto-container">
                     <div class="logo-container">
-                        <div class="logo-box left-logos">
-                            <figure class="logo">
-                                <a href="index.html"><img src="assets/images/Loghi Mur/Loghi MUR.png" alt="Logo"></a>
-                            </figure>
-                        </div>
-                        <div class="logo-box right-logo">
-                            <figure class="logo"><a href="index.html"><img src="assets/images/LogoLetters.png" alt="Logo"></a></figure>
-                        </div>
+                         <div class="logo-box">
+							<figure class="logo"><a href="index.html"><img src="assets/images/Loghi Mur/Loghi MUR.svg" alt=""></a></figure>
+						 </div>
                     </div>
                     <div class="outer-box">
                         <div class="menu-area clearfix">
@@ -380,9 +375,7 @@
                     <div class="col-lg-6 col-md-12 col-sm-12 image-column">
                         <div class="image-box">
                             <div class="shape-box">
-                                <div class="shape shape-1 hexagon_shape"></div>
                                 <div class="shape shape-2 hexagon_shape"></div>
-                                <div class="shape shape-3 hexagon_shape"></div>
                             </div>
                             <div class="image-inner hexagon_shape">
                                 <figure class="image"><img src="assets/images/resource/about-1.png" alt=""></figure>
@@ -402,7 +395,7 @@
                                 <h2>EBRAINS - Italy: <br /> we're empowering a new era in Brain Research</h2>
                             </div>
                             <div class="text">
-                                <p> EBRAINS - Italy is the Italian national research infrastructure for neuroscience, founded by European Union - PNRR M4C2. 
+                                <p> EBRAINS - Italy is the Italian Research Infrastructure for neuroscience, funded by European Union Next-Generation - PNRR M4C2. 
                                     It provides access to electrophysiology, molecular, imaging, and computational tools that allows users to study and analyse human brain.</p>
                             </div>
                             <div class="inner-box">
@@ -410,7 +403,7 @@
                                     <div class="col-lg-6 col-md-6 col-sm-12 single-column">
                                         <div class="single-item">
                                             <div class="icon-box"></div>
-                                            <h3>Characterise brain architecture.</h3>
+                                            <h3>Brain architecture.</h3>
                                         </div>
                                     </div>
                                     <div class="col-lg-6 col-md-6 col-sm-12 single-column">
@@ -455,11 +448,47 @@
                         <div class="inner-box">
                             <div class="image-box">
                                 <figure class="image"><a href="service-details.html"><img src="assets/images/service/service-1.jpeg" alt=""></a></figure>
-                                <div class="icon-box"><img src="assets/images/icons services/data.png" alt="Data Icon" style="width: 50px; height: 50px;"></div>
+                                <div class="icon-box"><img src="assets/images/icons services/server.png" alt="Data Icon" style="width: 50px; height: 50px;"></div>
                             </div>
                             <div class="lower-content">
                                 <h3><a href="service-details.html"> Open Data & Models </a></h3>
                                 <p>Open access to datasets, models and instrumentation on the brain regions</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="service-block-one">
+                        <div class="inner-box">
+                            <div class="image-box">
+                                <figure class="image"><a href="service-details-2.html"><img src="assets/images/service/facilities.jpg" alt=""></a></figure>
+                                <div class="icon-box"><img src="assets/images/icons services/analysis.png" alt="Models Icon" style="width: 50px; height: 50px;"></div>
+                            </div>
+                            <div class="lower-content">
+                                <h3><a href="service-details-2.html">Facilities </a></h3>
+                                <p>Research activities, labs and instrumentation open to researchers, enterpreneurship and stakeholders</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="service-block-one">
+                        <div class="inner-box">
+                            <div class="image-box">
+                                <figure class="image"><a href="service-details-3.html"><img src="assets/images/service/catalog.jpg" alt=""></a></figure>
+                                <div class="icon-box"><img src="assets/images/icons services/server.png" alt="Analysis Icon" style="width: 50px; height: 50px;"></div>
+                            </div>
+                            <div class="lower-content">
+                                <h3><a href="catalog.html"> Catalog</a></h3>
+                                <p> Soon available, it will be open to external users offering data, models, tools and servicies for collaborative activities</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="service-block-one">
+                        <div class="inner-box">
+                            <div class="image-box">
+                                <figure class="image"><a href="service-details-3.html"><img src="assets/images/service/tna.jpg" alt=""></a></figure>
+                                <div class="icon-box"><img src="assets/images/icons services/analysis.png" alt="Analysis Icon" style="width: 50px; height: 50px;"></div>
+                            </div>
+                            <div class="lower-content">
+                                <h3><a href="service-details-3.html"> Trans-National Access </a></h3>
+                                <p>It aims at providing coordinated open, physical, remote and virtual, access to 26 facilities in 21 Institutions</p>
                             </div>
                         </div>
                     </div>
@@ -471,50 +500,14 @@
                             </div>
                             <div class="lower-content">
                                 <h3><a href="service-details-3.html">HPC Cloud & Storage</a></h3>
-                                <p> The HPC and data storage group helps researchers access EBRAINS Italy's infrastructure and request computational, cloud, and storage resources</p>
+                                <p> It helps researchers access EBRAINS Italy's infrastructure and request computational, cloud, and storage resources</p>
                             </div>
                         </div>
                     </div>
                     <div class="service-block-one">
                         <div class="inner-box">
                             <div class="image-box">
-                                <figure class="image"><a href="service-details-3.html"><img src="assets/images/service/service-3.jpg" alt=""></a></figure>
-                                <div class="icon-box"><img src="assets/images/icons services/analysis.png" alt="Analysis Icon" style="width: 50px; height: 50px;"></div>
-                            </div>
-                            <div class="lower-content">
-                                <h3><a href="service-details-3.html"> Catalog</a></h3>
-                                <p> Soon available</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="service-block-one">
-                        <div class="inner-box">
-                            <div class="image-box">
-                                <figure class="image"><a href="service-details-2.html"><img src="assets/images/service/service-2.jpg" alt=""></a></figure>
-                                <div class="icon-box"><img src="assets/images/icons services/models.png" alt="Models Icon" style="width: 50px; height: 50px;"></div>
-                            </div>
-                            <div class="lower-content">
-                                <h3><a href="service-details-2.html">Facilities </a></h3>
-                                <p>Research activities, labs and instrumentation open to researchers, enterpreneurship and stakeholders</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="service-block-one">
-                        <div class="inner-box">
-                            <div class="image-box">
-                                <figure class="image"><a href="service-details-3.html"><img src="assets/images/service/service-3.jpg" alt=""></a></figure>
-                                <div class="icon-box"><img src="assets/images/icons services/analysis.png" alt="Analysis Icon" style="width: 50px; height: 50px;"></div>
-                            </div>
-                            <div class="lower-content">
-                                <h3><a href="service-details-3.html"> Trans-National Access </a></h3>
-                                <p>EBRAINS-Italy T-NA services aim at providing coordinated open, physical and/or virtual, access to facilities and services in the neuroscience field</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="service-block-one">
-                        <div class="inner-box">
-                            <div class="image-box">
-                                <figure class="image"><a href="service-details-3.html"><img src="assets/images/service/service-3.jpg" alt=""></a></figure>
+                                <figure class="image"><a href="service-details-3.html"><img src="assets/images/service/training.jpg" alt=""></a></figure>
                                 <div class="icon-box"><img src="assets/images/icons services/analysis.png" alt="Analysis Icon" style="width: 50px; height: 50px;"></div>
                             </div>
                             <div class="lower-content">
@@ -526,7 +519,7 @@
                     <div class="service-block-one">
                         <div class="inner-box">
                             <div class="image-box">
-                                <figure class="image"><a href="service-details-3.html"><img src="assets/images/service/service-3.jpg" alt=""></a></figure>
+                                <figure class="image"><a href="service-details-3.html"><img src="assets/images/service/researchacceleration.jpg" alt=""></a></figure>
                                 <div class="icon-box"><img src="assets/images/icons services/analysis.png" alt="Analysis Icon" style="width: 50px; height: 50px;"></div>
                             </div>
                             <div class="lower-content">
@@ -602,7 +595,7 @@
                             </div>
                             <div class="col-lg-6 col-md-12 col-sm-12 title-column">
                                 <div class="sec-title mr-0 light">
-                                    <span class="sub-title">our coure</span>
+                                    <span class="sub-title">our core</span>
                                     <h2>Neurodegenerative  <br /> diseases</h2>
                                 </div>
                             </div>
@@ -624,10 +617,10 @@
                                 <div class="industries-block-one">
                                     <div class="inner-box">
                                         <div class="icon-box">
-                                            <img src="assets/images/Icons diseases/Others.png" alt="Others diseases"  className="icon-image" style="width: 77px; height: 77px;">
+                                            <img src="assets/images/Icons diseases/Others.png" alt="Other diseases"  className="icon-image" style="width: 77px; height: 77px;">
                                         
                                         </div>
-                                        <h3><a href="index.html"> Others diseases </a></h3>
+                                        <h3><a href="index.html"> Other diseases </a></h3>
                                         <p> </p>
                                         <div class="link">
                                             <a href="index.html"><i class="flaticon-right-arrow"></i></a>
@@ -821,8 +814,8 @@
             <div class="bg-layer" style="background-image: url(assets/images/background/fun-fact2.png);"></div>
             <div class="auto-container">
                 <div class="sec-title light">
-                    <span class="sub-title">Interesting Numbers</span>
-                    <h2>Facts that will blow your mind</h2>
+                    <span class="sub-title">Features</span>
+                    <h2>We are all over Italy</h2>
                 </div>
                 <div class="inner-content">
                     <div class="row clearfix">
@@ -831,9 +824,9 @@
                                 <div class="inner-box">
                                     <div class="icon-box"><i class="flaticon-rating"></i></div>
                                     <div class="count-outer count-box">
-                                        <span class="count-text" data-speed="2100" data-stop="46">0</span>
+                                        <span class="count-text" data-speed="2100" data-stop="27">0</span>
                                     </div>
-                                    <h3> Publications 2024</h3>
+                                    <h3> Facilities</h3>
                                 </div>
                             </div>
                         </div>
@@ -842,9 +835,9 @@
                                 <div class="inner-box">
                                     <div class="icon-box"><i class="flaticon-atom"></i></div>
                                     <div class="count-outer count-box">
-                                        <span class="count-text" data-speed="2100" data-stop="90">0</span>
+                                        <span class="count-text" data-speed="2100" data-stop="21">0</span>
                                     </div>
-                                    <h3>Talks and events.</h3>
+                                    <h3>Institutions</h3>
                                 </div>
                             </div>
                         </div>
@@ -853,9 +846,9 @@
                                 <div class="inner-box">
                                     <div class="icon-box"><i class="flaticon-lab"></i></div>
                                     <div class="count-outer count-box">
-                                        <span class="count-text" data-speed="2100" data-stop="8000">0</span>
+                                        <span class="count-text" data-speed="2100" data-stop="40">0</span><span>%</span>
                                     </div>
-                                    <h3>Staff Members</h3>
+                                    <h3> South</h3>
                                 </div>
                             </div>
                         </div>
