--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             <nav class="menu-box">
                 <div class="nav-logo"><a href="index.html"><img src="assets/images/logo-2.png" alt="" title=""></a></div>
                 <div class="menu-outer"><!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header--></div>
-                </div>
+                
             </nav>
         </div><!-- End Mobile Menu -->
 
@@ -379,33 +379,34 @@
                                 <h2>EBRAINS - Italy: <br /> we're empowering a new era in Brain Research</h2>
                             </div>
                             <div class="text">
-                                <p> EBRAINS - Italy is the Italian Research Infrastructure for neuroscience, funded by European Union Next-Generation - PNRR M4C2. 
-                                    It provides access to electrophysiology, molecular, imaging, and computational tools that allows users to study and analyse human brain.</p>
+                                <p> EBRAINS-Italy is the Italian distributed research infrastructure, which aims at enabling clinical and experimental activities in the health sector to adequately exploit the most advanced modelling, computation and data analysis technologies available in neurosciences.
+                                    EBRAINS-Italy brings together several groups with cross-sectoral competences in modelling, high performance computing and experimental/theoretical neuroscience operating in Italy, integrating their activities in order to ensure synergies and generate substantial progress in the production and dissemination of knowledge in the scientific, industrial and social fields throughout Italy. 
+                                    The results obtained by the project, in terms of know-how, multidisciplinary resources such as new and unique experimental data, instrumentation and software specific for neuroscience, advanced computational models, specialized training, and HPC resources, most of which can be used from a single access point, will strengthen the competitiveness of enterprises, and the development of new international collaborations and innovative methods for research and development.</p>
                             </div>
                             <div class="inner-box">
                                 <div class="row clearfix">
                                     <div class="col-lg-6 col-md-6 col-sm-12 single-column">
                                         <div class="single-item">
                                             <div class="icon-box"></div>
-                                            <h3>Brain architecture.</h3>
+                                            <h3><a href="https://ebrains-italy.eu/resources?resourceType=data">Data</a></h3>
                                         </div>
                                     </div>
                                     <div class="col-lg-6 col-md-6 col-sm-12 single-column">
                                         <div class="single-item">
                                             <div class="icon-box_2"></div>
-                                            <h3>Implement large dataset</h3>
+                                            <h3><a href="https://ebrains-italy.eu/resources?resourceType=models">Models</a></h3>
                                         </div>
                                     </div>
                                     <div class="col-lg-6 col-md-6 col-sm-12 single-column">
                                         <div class="single-item">
                                             <div class="icon-box_2"></div>
-                                            <h3>Analyse brain</h3>
+                                            <h3><a href="https://ebrains-italy.eu/resources?resourceType=analysis">Analysis</a></h3>
                                         </div>
                                     </div>
                                     <div class="col-lg-6 col-md-6 col-sm-12 single-column">
                                         <div class="single-item">
                                             <div class="icon-box"></div>
-                                            <h3>Knowledge integration</h3>
+                                            <h3><a href="https://ebrains-italy.eu/resources?resourceType=data"> Innovation</a></h3>
                                         </div>
                                     </div>                                          
                                 </div>
@@ -722,18 +723,18 @@
                         <div class="news-block-one wow fadeInUp animated" data-wow-delay="00ms" data-wow-duration="1500ms">
                             <div class="inner-box">
                                 <div class="image-box">
-                                    <figure class="image"><img src="assets/images/news/news-1.png" alt=""></figure>
-                                    <div class="link-btn"><a href="blog-details.html"><i class="flaticon-zoom-in"></i></a></div>
+                                    <figure class="image"><img src="assets/images/news/3DHippo.jpg" alt=""></figure>
+                                    <div class="link-btn"><a href="https://www.modenatoday.it/attualita/modello-3d-ippocampo-ebrains-italy.html"><i class="flaticon-zoom-in"></i></a></div>
                                 </div>
                                 <div class="lower-content">
-                                    <div class="category"><a href="blog-details.html">Laboratory</a></div>
+                                    <div class="category"><a href="blog-details.html">Research</a></div>
                                     <ul class="post-info clearfix">
-                                        <li>11 August, 2022</li>
+                                        <li>24 March, 2023 </li>
                                         <li><a href="blog-details.html">By Admin</a></li>
                                     </ul>
-                                    <h3><a href="blog-details.html">Our new TESLA Machine is ready!</a></h3>
+                                    <h3><a href="https://www.modenatoday.it/attualita/modello-3d-ippocampo-ebrains-italy.html">New full-scale 3D structural model of the human hippocampus </a></h3>
                                     <div class="lower-box">
-                                        <div class="link"><a href="blog-details.html">Read More</a></div>
+                                        <div class="link"><a href="https://www.modenatoday.it/attualita/modello-3d-ippocampo-ebrains-italy.html">Read More</a></div>
                                         <div class="right-info">
                                         </div>
                                     </div>
@@ -745,18 +746,18 @@
                         <div class="news-block-one wow fadeInUp animated" data-wow-delay="300ms" data-wow-duration="1500ms">
                             <div class="inner-box">
                                 <div class="image-box">
-                                    <figure class="image"><img src="assets/images/news/news-2.jpeg" alt=""></figure>
-                                    <div class="link-btn"><a href="blog-details.html"><i class="flaticon-zoom-in"></i></a></div>
+                                    <figure class="image"><img src="assets/images/news/LogoScrittaPiccolo.png" alt=""></figure>
+                                    <div class="link-btn"><a href="https://www.ebrains-italy.eu/news/14"><i class="flaticon-zoom-in"></i></a></div>
                                 </div>
                                 <div class="lower-content">
-                                    <div class="category"><a href="blog-details.html">Research</a></div>
+                                    <div class="category"><a href="blog-details.html">Training</a></div>
                                     <ul class="post-info clearfix">
-                                        <li>21 July, 2022</li>
-                                        <li><a href="blog-details.html">By Admin</a></li>
+                                        <li>21 July, 2024</li>
+                                        <li><a href="https://www.ebrains-italy.eu/news/14">By Admin</a></li>
                                     </ul>
-                                    <h3><a href="blog-details.html">We found the cure for the Alzheimer</a></h3>
+                                    <h3><a href="https://www.ebrains-italy.eu/news/14">INCN - Italian Network for Computational Neuroscience</a></h3>
                                     <div class="lower-box">
-                                        <div class="link"><a href="blog-details.html">Read More</a></div>
+                                        <div class="link"><a href="https://www.ebrains-italy.eu/news/14">Read More</a></div>
                                         <div class="right-info">
                                         </div>
                                     </div>
@@ -768,18 +769,18 @@
                         <div class="news-block-one wow fadeInUp animated" data-wow-delay="600ms" data-wow-duration="1500ms">
                             <div class="inner-box">
                                 <div class="image-box">
-                                    <figure class="image"><img src="assets/images/news/news-3.jpeg" alt=""></figure>
-                                    <div class="link-btn"><a href="blog-details.html"><i class="flaticon-zoom-in"></i></a></div>
+                                    <figure class="image"><img src="assets/images/news/img_aim.png" alt=""></figure>
+                                    <div class="link-btn"><a href="https://aneis.eu/"><i class="flaticon-zoom-in"></i></a></div>
                                 </div>
                                 <div class="lower-content">
-                                    <div class="category"><a href="blog-details.html">Job</a></div>
+                                    <div class="category"><a href="https://aneis.eu/">Training</a></div>
                                     <ul class="post-info clearfix">
-                                        <li>16 July, 2022</li>
-                                        <li><a href="blog-details.html">By Admin</a></li>
+                                        <li>16 July, 2024</li>
+                                        <li><a href="https://aneis.eu/">By Admin</a></li>
                                     </ul>
-                                    <h3><a href="blog-details.html">New open positions, join our team now</a></h3>
+                                    <h3><a href="https://aneis.eu/">ANEIS Applied Neurosciences School</a></h3>
                                     <div class="lower-box">
-                                        <div class="link"><a href="blog-details.html">Read More</a></div>
+                                        <div class="link"><a href="https://aneis.eu/">Read More</a></div>
                                         <div class="right-info">
                                         </div>
                                     </div>
